feat(university-service): Промежуточный коммит(kafka)